--- a/Capex.Web/Capex.Web/Views/Gestion/VerIniciativa.cshtml
+++ b/Capex.Web/Capex.Web/Views/Gestion/VerIniciativa.cshtml
@@ -516,7 +516,7 @@
                                                             <th width="120px;"><div align="center">VAN (KUS$)</div></th>
                                                             <th width="120px;"><div align="center">TIR (%)</div></th>
                                                             <th width="120px;"><div align="center">IVAN</div></th>
-                                                            <th width="120px;"><div align="center">PayBack</div></th>
+                                                            <th width="120px;"><div align="center">PayBack (Años)</div></th>
                                                             <th width="120px;"><div align="center">Vida Util (Años)</div></th>
                                                             <th width="120px;"><div align="center">TC (CLP/US$)</div></th>
                                                         </tr>
