--- a/Capex.Web/Capex.Web/Views/Gestion/ModificarIniciativa.cshtml
+++ b/Capex.Web/Capex.Web/Views/Gestion/ModificarIniciativa.cshtml
@@ -1251,14 +1251,14 @@
                                                                                 <th><div align="center" style="width:100px;">VAN (KUS$)</div></th>
                                                                                 <th><div align="center" style="width:100px;">TIR (%)</div></th>
                                                                                 <th><div align="center" style="width:100px;">IVAN</div></th>
-                                                                                <th><div align="center" style="width:100px;">PayBack</div></th>
+                                                                                <th><div align="center" style="width:100px;">PayBack (Años)</div></th>
                                                                                 <th><div align="center" style="width:100px;">Vida Util (Años)</div></th>
                                                                                 <th><div align="center" style="width:100px;">TC (CLP/US$)</div></th>
                                                                             </tr>
                                                                         </thead>
                                                                         <tbody>
                                                                             <tr>
-                                                                                <td><input type="text" class="form-control" value="@Html.Raw(@ViewBag.EveVan)" style="text-align:center; text-transform:uppercase; width:100px;font-size:11px;" maxlength="8" onkeyup="return FNCheckDownKey2('EveVan')" id="EveVan" name="EveVan"></td>
+                                                                                <td><input type="text" class="form-control" value="@Html.Raw(@ViewBag.EveVan)" style="text-align:center; text-transform:uppercase; width:100px;font-size:11px;" maxlength="10" onkeyup="return FNCheckDownKey2('EveVan')" id="EveVan" name="EveVan"></td>
                                                                                 <td><input type="text" class="form-control" value="@Html.Raw(@ViewBag.EveTir)" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="7" onkeyup="return FNCheckDownKey(event.key)" id="EveTir" name="EveTir"></td>
                                                                                 <td><input type="text" class="form-control" value="@Html.Raw(@ViewBag.EveIvan)" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="8" onkeyup="return FNCheckDownKey2('EveIvan')" id="EveIvan" name="EveIvan"></td>
                                                                                 <td><input type="text" class="form-control" value="@Html.Raw(@ViewBag.EvePayBack)" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="8" onkeyup="return FNCheckDownKey2('EvePayBack')" id="EvePayBack" name="EvePayBack"></td>
