--- a/Capex.Web/Capex.Web/Views/Planificacion/EvalEconomica.cshtml
+++ b/Capex.Web/Capex.Web/Views/Planificacion/EvalEconomica.cshtml
@@ -19,14 +19,14 @@
                                         <th><div align="center" style="width:100px;">VAN (KUS$)</div></th>
                                         <th><div align="center" style="width:100px;">TIR (%)</div></th>
                                         <th><div align="center" style="width:100px;">IVAN</div></th>
-                                        <th><div align="center" style="width:100px;">PayBack</div></th>
+                                        <th><div align="center" style="width:100px;">PayBack (Años)</div></th>
                                         <th><div align="center" style="width:100px;">Vida Util (Años)</div></th>
                                         <th><div align="center" style="width:100px;">TC (CLP/US$)</div></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><input type="text" class="form-control" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="8" value="0" id="EveVan" onkeyup="return FNCheckDownKey2('EveVan')" name="EveVan"></td>
+                                        <td><input type="text" class="form-control" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="10" value="0" id="EveVan" onkeyup="return FNCheckDownKey2('EveVan')" name="EveVan"></td>
                                         <td><input type="text" class="form-control" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="7" value="0" onkeyup="return FNCheckDownKey(event.key)" id="EveTir" name="EveTir"></td>
                                         <td><input type="text" class="form-control" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="8" value="0" id="EveIvan" onkeyup="return FNCheckDownKey2('EveIvan')" name="EveIvan"></td>
                                         <td><input type="text" class="form-control" style="text-align:center;text-transform:uppercase; width:100px;font-size:11px;" maxlength="8" value="0" id="EvePayBack" onkeyup="return FNCheckDownKey2('EvePayBack')" name="EvePayBack"></td>
