--- a/Capex.Web/Capex.Web/Views/Planificacion/PdfPresupuesto.cshtml
+++ b/Capex.Web/Capex.Web/Views/Planificacion/PdfPresupuesto.cshtml
@@ -43,7 +43,7 @@
                     </table>
                     <table width="100%" border="0" style="font-size: 10px; font-family: Tahoma;">
                         <tr>
-                            <td width="33%"><div align="center"><b>Presupuesto</b> @ViewBag.IniPeriodo</div></td>
+                            <td width="33%"><div align="center"><b>@ViewBag.DESCRIPCION</b> @ViewBag.anioIni</div></td>
                             <td width="34%" style="color: #333"><div align="center">Fecha Rev: @ViewBag.IrFecha</div></td>
                             <!--     <td width="33%" style="color: #333"><div align="center"><b>KUS$  <b>@ViewBag.TotalAcumFinanciero<b> / 6 meses</b> </div></td> -->
                             <td width="33%" style="color: #333"><div align="center"><b>KUS$  <b>@ViewBag.TotalAcumTotPar<b> / 6 meses</b> </div></td>
@@ -197,7 +197,7 @@
                                     <td width="5%"><div align="center"> O</div></td>
                                     <td width="5%"><div align="center"> N</div></td>
                                     <td width="5%"><div align="center"> D</div></td>
-                                    <td width="7%"><div align="center" style="background-color: #DADADA;"><b> Total @ViewBag.Anio<b></div></td>
+                                    <td width="7%"><div align="center" style="background-color: #DADADA;"><b> Total @ViewBag.anioIni<b></div></td>
                                     <td width="7%"><div align="center"> Año  @ViewBag.AnioUno</div></td>
                                     <td width="7%"><div align="center"> Año @ViewBag.AnioDos</div></td>
                                     <td width="7%"><div align="center" style="background-color: #DADADA;"><b> Total<b></div></td>
