--- a/Capex.Web/Capex.Web/Views/GestionAprobadaAmsa/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionAprobadaAmsa/Index.cshtml
@@ -345,6 +345,7 @@
 
         </div>
     </div>
+    @Html.Partial("~/Views/Gestion/Adjunto.cshtml")
     <!--Hidden Control-->
     @{
         if (Session["CAPEX_SESS_USERNAME"] == null)
