--- a/Capex.Web/Capex.Web/Views/GestionIngresada/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionIngresada/Index.cshtml
@@ -344,6 +344,7 @@
     @Html.Partial("~/Views/Gestion/Comentario.cshtml")
     @Html.Partial("~/Views/Gestion/RechazoAdmin1.cshtml")
     @Html.Partial("~/Views/Gestion/Asignacion.cshtml")
+    @Html.Partial("~/Views/Gestion/Adjunto.cshtml")
     <!-- FIN - MODAL-->
     <!--Hidden Control-->
     @{
