--- a/Capex.Web/Capex.Web/Views/GestionNoAprobada/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionNoAprobada/Index.cshtml
@@ -340,6 +340,7 @@
 
         </div>
     </div>
+    @Html.Partial("~/Views/Gestion/Adjunto.cshtml")
     <!--Hidden Control-->
     @{
         if (Session["CAPEX_SESS_USERNAME"] == null)
